updated the schema

--- a/.env.sample
+++ b/.env.sample
@@ -2,11 +2,13 @@
 BASE_TESTNET_RPC="https://rpc.notadegen.com/base/sepolia"
 BASE_ACCOUNT_PK="user wallet private_key here" # acc 1
 BASE_SEPOLIA_CHAIN_ID=84532
+BASE_BRIDGE_ADDRESS="deployed address of bridge contract on Base here"
 
 # ARB
 ARBITRUM_TESTNET_RPC="https://sepolia-rollup.arbitrum.io/rpc"
 ARB_ACCOUNT_PK="user wallet private_key here" # acc 2
 ARBITRUM_SEPOLIA_CHAIN_ID=421614
+ARBITRUM_BRIDGE_ADDRESS="deployed address of bridge contract on Arbitrum here"
 
 # Bridge Validator
 VALIDATOR="0x8703f52D5f432b96C28552422950d2f5cBc8ba22" 
