--- a/.env.sample
+++ b/.env.sample
@@ -21,3 +21,5 @@ OPERATOR_PK="operator private_key here" # acc 3
 OWNER_PK="owner private_key here" # acc 5
 
 COINGECKO_BASE_URL="https://pro-api.coingecko.com/api/v3"
+MONGODB_URI="mongouri here"
+API_KEY_SALT="Salt here"
