--- a/.env.sample
+++ b/.env.sample
@@ -1,25 +1,26 @@
 # Base 
 BASE_TESTNET_RPC="https://rpc.notadegen.com/base/sepolia"
-BASE_ACCOUNT_PK="user wallet private_key here" # acc 1
 BASE_SEPOLIA_CHAIN_ID=84532
 BASE_BRIDGE_ADDRESS="deployed address of bridge contract on Base here"
+B10_TOKEN_BASE='deployed address of token on Base here'
 
 # ARB
 ARBITRUM_TESTNET_RPC="https://sepolia-rollup.arbitrum.io/rpc"
-ARB_ACCOUNT_PK="user wallet private_key here" # acc 2
 ARBITRUM_SEPOLIA_CHAIN_ID=421614
 ARBITRUM_BRIDGE_ADDRESS="deployed address of bridge contract on Arbitrum here"
+B10_TOKEN_ARBITRUM='deployed address of token on Base here'
 
 # Bridge Validator
-VALIDATOR="0x8703f52D5f432b96C28552422950d2f5cBc8ba22" 
-VALIDATOR_ACCOUNT_PK="validator private_key here" # acc 3
+VALIDATOR="validator address here" 
+VALIDATOR_PRIVATE_KEY="validator private_key here" 
 
-# operator
-OPERATOR_PK="operator private_key here" # acc 3
-
-# owner
-OWNER_PK="owner private_key here" # acc 5
+# admin
+ADMIN_ACCOUNT_PK="admin private_key here" 
+RELAYER_PRIVATE_KEY="relayer private_key here" 
 
 COINGECKO_BASE_URL="https://pro-api.coingecko.com/api/v3"
 MONGODB_URI="mongouri here"
 API_KEY_SALT="Salt here"
+
+USER1_PK='user1/sender private key' 
+USER2_PK='user2/recipient private key' 
