--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "graphql": "^16.10.0",
     "graphql-subscriptions": "^3.0.0",
     "mongoose": "^8.9.5",
     "nodemon": "^3.1.9",
