--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 # Base 
-BASE_TESTNET_RPC="https://rpc.notadegen.com/base/sepolia"
+BASE_SEPOLIA_RPC="https://rpc.notadegen.com/base/sepolia"
 BASE_SEPOLIA_CHAIN_ID=84532
 BASE_BRIDGE_ADDRESS="deployed address of bridge contract on Base here"
 B10_TOKEN_BASE='deployed address of token on Base here'
