--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "npx hardhat test",
     "dev": "nodemon index.ts",
     "start": "ts-node index.ts",
+    "build": "npm run compile && tsc",
     "compile": "npx hardhat compile"
   },
   "keywords": [],
