--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "deploy:localhost": "npx hardhat ignition deploy ignition/modules/Bridge.ts --network localhost",
     "deploy:base_sepolia": "npx hardhat ignition deploy ignition/modules/Bridge.ts --network base_sepolia",
     "deploy:arbitrum_sepolia": "npx hardhat ignition deploy ignition/modules/Bridge.ts --network arbitrum_sepolia",
+    "deploy:sepolia": "npx hardhat ignition deploy ignition/modules/Bridge.ts --network eth_sepolia",
     "test": "npx hardhat test",
     "dev": "nodemon index.ts",
     "start": "ts-node index.ts",
